# Embedded-Artistry_Intro-to-CMake_Project-code

./: CMakeLists.txt  README.md
cmake/: BuildOptions.cmake  CheckAndApplyFlags.cmake
cmake/toolchains/cross/: arm-none-eabi-gcc.cmake  cortex-m3.cmake  cortex-m4_hardfloat.cmake  cortex-m7_hardfloat.cmake
cmake/toolchains/native/: clang.cmake
docs/: make-warnings.txt
src/: CMakeLists.txt
test/: CMakeLists.txt  main.c
